# sphinxcontrib-skeleton

./: .copier-answers.yml  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml  warnings.txt
.github/workflows/: pypackage_check.yaml  release.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
docs/_template/: pypackage-credit.html
sphinxcontrib/skeleton/: __init__.py  demo_directive.py  demo_role.py
tests/: conftest.py  test_build.py
tests/roots/test-directive/: conf.py
tests/roots/test-role/: index.rst
