[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-skeleton"
version = "0.0.2"
description = "the skeleton of a sphinx extension in the sphinxcontrib community"
keywords = [
  "skeleton",
  "Python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
  "sphinx",
  "deprecated>=1.2.14"
]

[[project.authors]]
name = "Firstname Lastname"
email = "firstname.lastname@domain.io"

[project.license]
text = "MIT"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/username/sphinxcontrib-skeleton"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-sugar",
  "pytest-cov",
  "pytest-deadfixtures",
  "pytest-regressions",
  "beautifulsoup4",
]
doc = [
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-autoapi"
]

[tool.hatch.build.targets.wheel]
only-include = ["sphinxcontrib"]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit",
  "commitizen",
  "nox"
]
post-install-commands = ["pre-commit install"]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
version = "0.0.2"
version_files = [
    "pyproject.toml:version",
    "sphinxcontrib/skeleton/__init__.py:__version__",
    "docs/conf.py:release",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 100

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "D", "RUF"]
ignore = [
  "E501",  # line too long | Black take care of it
  "D212",  # Multi-line docstring | We use D213
]

[tool.ruff.per-file-ignores]
"tests/*" = [
  "D102", # Missing docstring in public method | this is test who cares
  "D103", # Missing docstring in public function | this is test who cares
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["sphinxcontrib.skeleton"]

[tool.doc8]
ignore = ["D001"] # we follow a 1 line = 1 paragraph style

[tool.mypy]
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true

[tool.licensecheck]
using = "PEP631"

[tool.codespell]
